# python-serverless-demo

./: .dockerignore  .flake8  .gitattributes  .gitignore  Dockerfile  PROJECT_STATUS.md  README.md  calculator.py  check_ci.py  check_job.py  pyproject.toml  requirements.txt  tatus  test_calculator.py
.github/workflows/: python-ci.yml
docs/: PROJECT_STATUS.md  design.md  development_setup.md  workflow_guide.md
scripts/: check_ci.py  check_job.py  check_ssh.py  check_workflow_errors.py  close_pr.py  create_pr.py  get_reviews.py  review_comments.json  review_pr.py  setup_docker.py
src/calculator/: __init__.py  api.py  core.py  lambda_handler.py
tests/calculator/: test_api.py  test_core.py
