[tool.poetry]
name = "python-serverless-demo"
version = "0.1.0"
description = "A serverless demo project using Python"
authors = ["yuyu0317 <zhuyu4010qq@gmail.com>"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0.0"
aws-lambda-powertools = "^2.0"
boto3 = "^1.34"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
black = "^23.12"
flake8 = "^6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"