[tool.poetry]
name = "python-serverless-demo"
version = "0.1.0"
description = "A serverless demo project using Python"
authors = ["yuyu0317 <zhuyu4010qq@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "calculator", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0.0"
aws-lambda-powertools = "^2.0"
boto3 = "^1.34"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
black = "^23.12"
flake8 = "^6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]